syntax = "proto3";
option java_multiple_files = true;

package sdmxdl.grpc;

import "sdmxdl_api.proto";
import "sdmxdl_web.proto";

service SdmxWebManager {

  rpc GetAbout(Empty) returns (sdmxdl.format.protobuf.About);

  rpc GetSources(Empty) returns (stream sdmxdl.format.protobuf.web.WebSource);

  rpc GetMonitorReport(sdmxdl.format.protobuf.web.SourceRequest) returns (sdmxdl.format.protobuf.web.MonitorReport);

  rpc GetDatabases(sdmxdl.format.protobuf.web.SourceRequest) returns (stream sdmxdl.format.protobuf.Database);

  rpc GetFlows(sdmxdl.format.protobuf.web.DatabaseRequest) returns (stream sdmxdl.format.protobuf.Flow);

  rpc GetFlow(sdmxdl.format.protobuf.web.FlowRequest) returns (sdmxdl.format.protobuf.Flow);

  rpc GetStructure(sdmxdl.format.protobuf.web.FlowRequest) returns (sdmxdl.format.protobuf.Structure);

  rpc GetData(sdmxdl.format.protobuf.web.KeyRequest) returns (sdmxdl.format.protobuf.DataSet);

  rpc GetDataStream(sdmxdl.format.protobuf.web.KeyRequest) returns (stream sdmxdl.format.protobuf.Series);

  rpc GetAvailability(KeyDimensionRequest) returns (stream DimensionCodes);
}

message Empty {
}

message KeyDimensionRequest {
  string source = 1;
  string flow = 2;
  string key = 3;
  int32 dimension = 4;
  optional string database = 5;
  optional string languages = 6;
}

message DimensionCodes {
  repeated string codes = 1;
}